--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,11 @@
     "build": "vite build",
     "check": "tsc --noEmit"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
+  }
 }
