Local changes before rebase

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,51 +1,24 @@
 {
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist",
-    "**/*.test.ts"
-  ],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
-
     "module": "ESNext",
     "moduleResolution": "bundler",
-
     "target": "ESNext",
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
-    ],
-
+    "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "react-jsx",
-
     "strict": true,
     "skipLibCheck": true,
-
     "esModuleInterop": true,
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
-
     "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "types": [
-      "node"
-    ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@shared/*": [
-        "../shared/src/*"
-      ]
+      "@/*": ["./src/*"],
+      "@shared/*": ["../shared/src/*"]
     }
   }
 }
