--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.47.0",
     "@tanstack/react-query": "^5.60.5",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
